# summer-solstice-26

Arduino-Proj/Arduino/libraries/LiquidCrystal_PCF8574/src/: LiquidCrystal_PCF8574.cpp
Arduino/libraries/LiquidCrystal_PCF8574/: README.md
Arduino/libraries/LiquidCrystal_PCF8574/src/: LiquidCrystal_PCF8574.h
Cloudflare-DDNS/desktop/: config.example.py  getIPv6.py  main.py
Cloudflare-DDNS/get-dns_record_id/: config.example.py  main.py
Cloudflare-DDNS/raspberrypi/: config.example.py  main.py
ESP32S3-Car/: ESP32S3-Car.ino  bsp_motor_iic.cpp  bsp_motor_iic.hpp
ESPIDF-Proj/IDF-Notes/: 4.md  6.md  7.md
ESPIDF-Proj/Projects/00_basic/: sdkconfig
ESPIDF-Proj/Projects/01_led/: CMakeLists.txt  sdkconfig
ESPIDF-Proj/Projects/01_led/components/BSP/: CMakeLists.txt
ESPIDF-Proj/Projects/01_led/components/BSP/LED/: led.c  led.h
ESPIDF-Proj/Projects/01_led/main/: main.c
ESPIDF-Proj/Projects/02_key/: .gitignore  CMakeLists.txt
ESPIDF-Proj/Projects/02_key/components/BSP/: CMakeLists.txt
ESPIDF-Proj/Projects/02_key/components/BSP/KEY/: key.c  key.h
ESPIDF-Proj/Projects/02_key/components/BSP/LED/: led.c  led.h
ESPIDF-Proj/Projects/02_key/main/: main.c
Victor87E/: main.py
